--- a/client-app/src/app/layout/style.css
+++ b/client-app/src/app/layout/style.css
@@ -1,8 +1,20 @@
 body {
   margin: 0;
-  font-family: 'IRANSansWeb';
+  font-family: 'IRANSansWeb' !important;
   background-color: rgb(234, 234, 234) !important;
   direction: rtl;
+}
+.defaultFont,
+.Toastify__toast-body {
+  font-family: 'IRANSansWeb' !important;
+}
+.Toastify__toast-body {
+  text-align: right;
+  margin-right: 7px !important;
+}
+.art-nopadding {
+  padding: 0 !important;
+  margin: 0 !important;
 }
 .art-topContent {
   background: url('/assets/mainPageImg1.png') no-repeat bottom;
@@ -20,15 +32,17 @@ body {
   -webkit-transform: skewY(-5deg);
   -ms-transform: skewY(-5deg);
   transform: skewY(-5deg);
+  margin-top: 20px;
 }
 .art-midDesc {
   position: absolute;
   z-index: 1;
   width: 100%;
-  top: 85px;
+  top: 100px;
   background-color: #ffffff82;
   border: 1px solid #eaeaea;
   border-radius: 10px;
+  padding-top: 60px;
 }
 .btn-group {
   position: relative;
@@ -74,19 +88,245 @@ body {
     0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
-.select-wrapper .caret {
-  right: auto !important;
-  left: 0 !important;
+.art-login {
+  width: 35%;
+  margin: 60px auto 30px auto;
+  background-color: white;
+  padding: 30px;
+  border: 1px dashed #bfbfeb;
+  border-radius: 10px;
 }
-.dropdown-content {
-  padding-right: 0px !important;
+
+.art-closelogin {
+  margin-top: 25px;
 }
-.dropdown-content li {
-  text-align: right !important;
+.art-userAwatar {
+  margin-top: 5px;
+  width: 30px;
+}
+.art-userDrop {
+  top: 65px !important;
+  width: 130px !important;
+  border-radius: 10px;
+}
+.art-userMenuItem {
+  margin-top: 24px;
+  padding: 0px;
+}
+.art-divider {
+  width: 40px;
+  margin-top: 20px;
+  background-color: white;
+  transform: rotate(90deg);
+}
+body {
+  background: #ffffff;
+  margin: 50px 300px;
+}
+
+.input-group
+  > .input-group-append:last-child
+  > .btn:not(:last-child):not(.dropdown-toggle),
+.input-group
+  > .input-group-append:last-child
+  > .input-group-text:not(:last-child),
+.input-group > .input-group-append:not(:last-child) > .btn,
+.input-group > .input-group-append:not(:last-child) > .input-group-text,
+.input-group > .input-group-prepend > .btn,
+.input-group > .input-group-prepend > .input-group-text {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-right-radius: 5px !important;
+  border-bottom-right-radius: 5px !important;
+}
+
+.input-group-text {
+  width: 40px;
+  display: block !important;
 }
 input {
-  padding-right: 10px !important;
+  padding-right: 5px;
 }
-/* .select-wrapper input.select-dropdown {
-  width: 99% !important;
-} */
+.art-bar {
+  margin: 10px;
+}
+.art-registerLink {
+  margin-right: 5px;
+  text-decoration: none !important;
+  color: #e28f00;
+  border-bottom: 1px dashed;
+}
+.span-menu {
+  border-right: 1px dashed;
+  height: 17px;
+  color: #f53838;
+}
+.divDashSearch {
+  position: relative;
+}
+.icoDashSearch {
+  position: absolute;
+  left: 25px;
+  top: 7px;
+  font-size: 25px;
+  color: #676464;
+}
+input#txtDashSearch {
+  margin-top: 10px;
+  background-color: #a0a0a0;
+  color: white;
+  text-align: center;
+  direction: rtl;
+  padding-left: 45px;
+}
+.CloseIcon {
+  transform: rotate(180deg);
+  position: absolute;
+  left: 4px;
+  transition: 0.5s;
+  top: 14px;
+}
+.OpenIcon {
+  position: absolute;
+  left: 10px;
+  transition: 0.5s;
+}
+.art-mainContent {
+  padding-top: 75px;
+  margin-right: 35px !important;
+  background-color: #4ecdc429;
+  text-align: right;
+}
+.waves-effect {
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+  overflow: hidden;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  vertical-align: middle;
+  z-index: 1;
+  will-change: opacity, transform;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+
+.waves-effect .waves-ripple {
+  position: absolute;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  margin-top: -10px;
+  margin-left: -10px;
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.2);
+  -webkit-transition: all 0.7s ease-out;
+  -moz-transition: all 0.7s ease-out;
+  -o-transition: all 0.7s ease-out;
+  -ms-transition: all 0.7s ease-out;
+  transition: all 0.7s ease-out;
+  -webkit-transition-property: -webkit-transform, opacity;
+  -moz-transition-property: -moz-transform, opacity;
+  -o-transition-property: -o-transform, opacity;
+  transition-property: transform, opacity;
+  -webkit-transform: scale(0);
+  -moz-transform: scale(0);
+  -ms-transform: scale(0);
+  -o-transform: scale(0);
+  transform: scale(0);
+  pointer-events: none;
+}
+
+.waves-effect.waves-light .waves-ripple {
+  background-color: rgba(255, 255, 255, 0.45);
+}
+
+.waves-effect.waves-red .waves-ripple {
+  background-color: rgba(244, 67, 54, 0.7);
+}
+
+.waves-effect.waves-yellow .waves-ripple {
+  background-color: rgba(255, 235, 59, 0.7);
+}
+
+.waves-effect.waves-orange .waves-ripple {
+  background-color: rgba(255, 152, 0, 0.7);
+}
+
+.waves-effect.waves-purple .waves-ripple {
+  background-color: rgba(156, 39, 176, 0.7);
+}
+
+.waves-effect.waves-green .waves-ripple {
+  background-color: rgba(76, 175, 80, 0.7);
+}
+
+.waves-effect.waves-teal .waves-ripple {
+  background-color: rgba(0, 150, 136, 0.7);
+}
+
+/* Firefox Bug: link not triggered */
+a.waves-effect .waves-ripple {
+  z-index: -1;
+}
+
+/* linear loading */
+.bar-container {
+  position: relative;
+  height: 5px;
+  width: 100%;
+  background-color: #bdbdbd;
+}
+
+.bar {
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 0;
+  right: 0;
+}
+
+.bar:nth-child(1) {
+  background-color: #006495;
+  animation: linear_loader 3s linear 1s infinite;
+}
+
+.bar:nth-child(2) {
+  background-color: #f2635f;
+  animation: linear_loader 3s linear 2s infinite;
+}
+
+.bar:nth-child(3) {
+  background-color: #f4d00c;
+  animation: linear_loader 3s linear 3s infinite;
+}
+
+@keyframes linear_loader {
+  0% {
+    right: 100%;
+    width: 10%;
+  }
+  30% {
+    right: 0%;
+    width: 40%;
+  }
+  50% {
+    right: 0%;
+    width: 0%;
+  }
+  80% {
+    right: 0%;
+    width: 0%;
+  }
+  100% {
+    right: 0%;
+    width: 0%;
+  }
+}
+/* end linear loading */
