--- a/client-app/src/app/layout/css/style.css
+++ b/client-app/src/app/layout/css/style.css
@@ -285,7 +285,7 @@ ul.sidebar-menu li ul.sub {
 
 ul.sidebar-menu {
   margin-top: 75px;
-  height: 1500px;
+  min-height: 1000px;
 }
 
 #sidebar > ul > li > ul.sub {
