--- a/client-app/src/app/layout/style.css
+++ b/client-app/src/app/layout/style.css
@@ -423,3 +423,11 @@ input#txtDashSearch {
     background-position: 0% 51%;
   }
 }
+.react-confirm-alert-body {
+  font-family: inherit !important;
+  direction: ltr !important;
+  text-align: right !important;
+}
+.react-confirm-alert-overlay {
+  background: rgba(0, 0, 0, 0.65) !important;
+}
